--- a/src/renegade/index.html
+++ b/src/renegade/index.html
@@ -1866,8 +1866,8 @@
 </div>
 
 <div class="credits">Modification by ForwardFeed Originaly Created by Honko
-    <ul> TODO ADD RIGHT REPO
-        <li><a href="https://github.com/ForwardFeed/runbuncalc" class="links-lighten" target="_blank">Modification Repository</a></li>
+    <ul>
+        <li><a href="https://github.com/ForwardFeed/unc class="links-lighten" target="_blank">Modification Repository</a></li>
         <br>
         <li><a href="https://github.com/smogon/damage-calc/contributors" class="links-lighten" target="_blank">Smogon Contributors</a></li>
         <li><a href="https://www.smogon.com/forums/threads/pok%C3%A9mon-showdown-damage-calculator.3593546/" class="links-lighten" target="_blank">Smogon Bug Reports</a></li>
