--- a/src/renegade/trainereditor.html
+++ b/src/renegade/trainereditor.html
@@ -700,7 +700,7 @@
     <div class="credits">Created by ForwardFeed thanks to the prior work of Honko with the smogon calc
         <ul>
             <li>
-                <a href="https://github.com/smogon/damage-calc" class="links-lighten" target="_blank">
+                <a href="https://github.com/ForwardFeed/unc" class="links-lighten" target="_blank">
                     GitHub repository
                 </a>
             </li>
