--- a/src/runbun/index.html
+++ b/src/runbun/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>Pok&eacute;mon Damage Calculator</title>
-    <link type="text/css" rel="stylesheet" href="./js/vendor/select2/select2.css" />
-    <link type="text/css" rel="stylesheet" href="./css/main.css?" />
-    <link type="text/css" rel="stylesheet" href="./css/vendor/bootstrap.css" />
-    <link type="text/css" rel="stylesheet" href="./css/dark-theme.css" id="dark-theme-styles">
+    <link type="text/css" rel="stylesheet" href="../js/vendor/select2/select2.css" />
+    <link type="text/css" rel="stylesheet" href="../css/main.css?" />
+    <link type="text/css" rel="stylesheet" href="../css/vendor/bootstrap.css" />
+    <link type="text/css" rel="stylesheet" href="../css/dark-theme.css" id="dark-theme-styles">
     <!-- Immediately loads the dark theme in order to reduce FOIT -->
     <script>
         /*
@@ -1822,10 +1822,10 @@
     <script type="text/javascript">
         var linkExtension = '.template.html';
     </script>
-    <script type="text/javascript" src="./js/vendor/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="./js/vendor/select2/select2.min.js"></script>
-    <script type="text/javascript" src="./js/vendor/url-search-params-0.1.2.min.js"></script>
-    <script type="text/javascript" src="./js/vendor/interact.min.js"></script>
+    <script type="text/javascript" src="../js/vendor/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="../js/vendor/select2/select2.min.js"></script>
+    <script type="text/javascript" src="../js/vendor/url-search-params-0.1.2.min.js"></script>
+    <script type="text/javascript" src="../js/vendor/interact.min.js"></script>
     <script type="text/javascript">
         this.__createBinding = function(o, m, k) {
             o[k] = m[k];
@@ -1833,53 +1833,51 @@
         var calc = exports = {};
         function require() { return exports };
     </script>
-    <script type="text/javascript" src="./calc/util.js?"></script>
-    <script type="text/javascript" src="./calc/stats.js?"></script>
-    <script type="text/javascript" src="./calc/data/species.js?"></script>
-	<script type="text/javascript" src="./js/data/trainersets.js"></script>
-    <script type="text/javascript" src="./js/data/truck.js"></script>
-    <script type="text/javascript" src="./calc/data/types.js?"></script>
-    <script type="text/javascript" src="./calc/data/natures.js?"></script>
-    <script type="text/javascript" src="./calc/data/abilities.js?"></script>
-    <script type="text/javascript" src="./calc/data/moves.js?"></script>
-    <script type="text/javascript" src="./calc/data/items.js?"></script>
-    <script type="text/javascript" src="./calc/data/index.js?"></script>
-    <script type="text/javascript" src="./calc/move.js?"></script>
-    <script type="text/javascript" src="./calc/pokemon.js?"></script>
-    <script type="text/javascript" src="./calc/field.js?"></script>
-    <script type="text/javascript" src="./calc/items.js?"></script>
-    <script type="text/javascript" src="./calc/mechanics/util.js?"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen789.js?"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen56.js?"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen4.js?"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen3.js?"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen12.js?"></script>
-    <script type="text/javascript" src="./calc/calc.js?"></script>
-    <script type="text/javascript" src="./calc/desc.js?"></script>
-    <script type="text/javascript" src="./calc/result.js?"></script>
-    <script type="text/javascript" src="./calc/adaptable.js?"></script>
-    <script type="text/javascript" src="./calc/index.js?"></script>
-    <script type="text/javascript" src="./js/calc_settings.js"></script>
-    <script type="text/javascript" src="./js/shared_controls.js?"></script>
-    <script type="text/javascript" src="./js/index_randoms_controls.js?"></script>
-    <script type="text/javascript" src="./js/moveset_import.js?"></script>
+    <script type="text/javascript" src="../calc/util.js?"></script>
+    <script type="text/javascript" src="../calc/stats.js?"></script>
+    <script type="text/javascript" src="../calc/data/species.js?"></script>
+	<script type="text/javascript" src="./data/trainersets.js"></script>
+    <script type="text/javascript" src="../calc/data/types.js?"></script>
+    <script type="text/javascript" src="../calc/data/natures.js?"></script>
+    <script type="text/javascript" src="../calc/data/abilities.js?"></script>
+    <script type="text/javascript" src="../calc/data/moves.js?"></script>
+    <script type="text/javascript" src="../calc/data/items.js?"></script>
+    <script type="text/javascript" src="../calc/data/index.js?"></script>
+    <script type="text/javascript" src="../calc/move.js?"></script>
+    <script type="text/javascript" src="../calc/pokemon.js?"></script>
+    <script type="text/javascript" src="../calc/field.js?"></script>
+    <script type="text/javascript" src="../calc/items.js?"></script>
+    <script type="text/javascript" src="../calc/mechanics/util.js?"></script>
+    <script type="text/javascript" src="../calc/mechanics/gen789.js?"></script>
+    <script type="text/javascript" src="../calc/mechanics/gen56.js?"></script>
+    <script type="text/javascript" src="../calc/mechanics/gen4.js?"></script>
+    <script type="text/javascript" src="../calc/mechanics/gen3.js?"></script>
+    <script type="text/javascript" src="../calc/mechanics/gen12.js?"></script>
+    <script type="text/javascript" src="../calc/calc.js?"></script>
+    <script type="text/javascript" src="../calc/desc.js?"></script>
+    <script type="text/javascript" src="../calc/result.js?"></script>
+    <script type="text/javascript" src="../calc/adaptable.js?"></script>
+    <script type="text/javascript" src="../calc/index.js?"></script>
+    <script type="text/javascript" src="./data/calc_settings.js"></script>
+    <script type="text/javascript" src="../js/shared_controls.js?"></script>
+    <script type="text/javascript" src="../js/index_randoms_controls.js?"></script>
+    <script type="text/javascript" src="../js/moveset_import.js?"></script>
+    <script type="text/javascript" src="./calculator_specific.js"></script>
 </div>
 
 <div class="credits">Modification by ForwardFeed Originaly Created by Honko
-    <ul> TODO ADD RIGHT REPO
-        <li><a href="https://github.com/ForwardFeed/runbuncalc" class="links-lighten" target="_blank">Modification Repository</a></li>
+    <ul>
+        <li><a href="https://github.com/ForwardFeed/unc class="links-lighten" target="_blank">Modification Repository</a></li>
         <br>
         <li><a href="https://github.com/smogon/damage-calc/contributors" class="links-lighten" target="_blank">Smogon Contributors</a></li>
         <li><a href="https://www.smogon.com/forums/threads/pok%C3%A9mon-showdown-damage-calculator.3593546/" class="links-lighten" target="_blank">Smogon Bug Reports</a></li>
-        <li><a href="https://github.com/smogon/damage-calc" class="links-lighten" target="_blank">Smogong qGitHub repository</a></li>
+        <li><a href="https://github.com/smogon/damage-calc" class="links-lighten" target="_blank">Smogon GitHub repository</a></li>
     </ul>
     <div id="sets">
         <button type="button" id="dark-theme-toggle"></button>
-        <script type="text/javascript" src="./js/dark-theme-toggle.js?"></script>
+        <script type="text/javascript" src="../js/dark-theme-toggle.js?"></script>
         <button id="side-arrow-toggle" data-id="true">Show Side Arrows</button>
         <button id="double-legacy-mode">Doubles Modern</button>
-        <a href="runandbun_script_imports.lua" download="lua_script_for_export">Download Lua Script</a>
-        <a href="img/AI_flowchart_R&B.png" target="_blank" rel="noopener noreferrer">Flowchart of the AI</a>
     </div>
 </div>
 
