--- a/src/runbun/trainereditor.html
+++ b/src/runbun/trainereditor.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <title>UNC Pok&eacute;mon Calculator Trainer Editor </title>
-    <link type="text/css" rel="stylesheet" href="./js/vendor/select2/select2.css" />
-    <link type="text/css" rel="stylesheet" href="./css/main.css?" />
-    <link type="text/css" rel="stylesheet" href="./css/editor.css" />
-    <link type="text/css" rel="stylesheet" href="./css/vendor/bootstrap.css" />
-    <link type="text/css" rel="stylesheet" href="./css/dark-theme.css" id="dark-theme-styles">
+    <link type="text/css" rel="stylesheet"href="../js/vendor/select2/select2.css" />
+    <link type="text/css" rel="stylesheet"href="../css/main.css?" />
+    <link type="text/css" rel="stylesheet"href="../css/editor.css" />
+    <link type="text/css" rel="stylesheet"href="../css/vendor/bootstrap.css" />
+    <link type="text/css" rel="stylesheet"href="../css/dark-theme.css" id="dark-theme-styles">
     <!-- Immediately loads the dark theme in order to reduce FOIT -->
     <script>
         /*
@@ -657,9 +657,9 @@
             version 0.0.1 First release to any public
         </div>
     </div>
-    <script type="text/javascript" src="./js/vendor/jquery-1.9.1.min.js"></script>
-    <script type="text/javascript" src="./js/vendor/select2/select2.min.js"></script>
-    <script type="text/javascript" src="./js/vendor/interact.min.js"></script>
+    <script type="text/javascript" src="../js/vendor/jquery-1.9.1.min.js"></script>
+    <script type="text/javascript" src="../js/vendor/select2/select2.min.js"></script>
+    <script type="text/javascript" src="../js/vendor/interact.min.js"></script>
     <script type="text/javascript">
         this.__createBinding = function(o, m, k) {
             o[k] = m[k];
@@ -667,47 +667,47 @@
         var calc = exports = {};
         function require() { return exports };
     </script>
-    <script type="text/javascript" src="./calc/util.js?"></script>
-    <script type="text/javascript" src="./calc/stats.js?"></script>
+    <script type="text/javascript" src="../calc/util.js?"></script>
+    <script type="text/javascript" src="../calc/stats.js?"></script>
 
-    <script type="text/javascript" src="./js/data/trainersets.js?"></script>
-    <script type="text/javascript" src="./calc/data/species.js?"></script>
-    <script type="text/javascript" src="./calc/data/types.js?"></script>
-    <script type="text/javascript" src="./calc/data/natures.js?"></script>
-    <script type="text/javascript" src="./calc/data/abilities.js?"></script>
-    <script type="text/javascript" src="./calc/data/moves.js?"></script>
-    <script type="text/javascript" src="./calc/data/items.js?"></script>
-    <script type="text/javascript" src="./calc/data/index.js?"></script>
-    <script type="text/javascript" src="./calc/move.js?"></script>
-    <script type="text/javascript" src="./calc/pokemon.js?"></script>
-    <script type="text/javascript" src="./calc/field.js?"></script>
-    <script type="text/javascript" src="./calc/items.js?"></script>
-    <script type="text/javascript" src="./calc/mechanics/util.js?"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen789.js?"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen56.js?"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen4.js?"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen3.js?"></script>
-    <script type="text/javascript" src="./calc/mechanics/gen12.js?"></script>
-    <script type="text/javascript" src="./calc/calc.js?"></script>
-    <script type="text/javascript" src="./calc/desc.js?"></script>
-    <script type="text/javascript" src="./calc/result.js?"></script>
-    <script type="text/javascript" src="./calc/adaptable.js?"></script>
-    <script type="text/javascript" src="./calc/index.js?"></script>
-    <script type="text/javascript" src="./js/calc_settings.js"></script>
-    <script type="text/javascript" src="./js/trainereditor.js"></script>
-    <script type="text/javascript" src="./js/moveset_import_editor.js"></script>
+    <script type="text/javascript" src="./data/trainersets.js?"></script>
+    <script type="text/javascript" src="../calc/data/species.js?"></script>
+    <script type="text/javascript" src="../calc/data/types.js?"></script>
+    <script type="text/javascript" src="../calc/data/natures.js?"></script>
+    <script type="text/javascript" src="../calc/data/abilities.js?"></script>
+    <script type="text/javascript" src="../calc/data/moves.js?"></script>
+    <script type="text/javascript" src="../calc/data/items.js?"></script>
+    <script type="text/javascript" src="../calc/data/index.js?"></script>
+    <script type="text/javascript" src="../calc/move.js?"></script>
+    <script type="text/javascript" src="../calc/pokemon.js?"></script>
+    <script type="text/javascript" src="../calc/field.js?"></script>
+    <script type="text/javascript" src="../calc/items.js?"></script>
+    <script type="text/javascript" src="../calc/mechanics/util.js?"></script>
+    <script type="text/javascript" src="../calc/mechanics/gen789.js?"></script>
+    <script type="text/javascript" src="../calc/mechanics/gen56.js?"></script>
+    <script type="text/javascript" src="../calc/mechanics/gen4.js?"></script>
+    <script type="text/javascript" src="../calc/mechanics/gen3.js?"></script>
+    <script type="text/javascript" src="../calc/mechanics/gen12.js?"></script>
+    <script type="text/javascript" src="../calc/calc.js?"></script>
+    <script type="text/javascript" src="../calc/desc.js?"></script>
+    <script type="text/javascript" src="../calc/result.js?"></script>
+    <script type="text/javascript" src="../calc/adaptable.js?"></script>
+    <script type="text/javascript" src="../calc/index.js?"></script>
+    <script type="text/javascript" src="../js/calc_settings.js"></script>
+    <script type="text/javascript" src="../js/trainereditor.js"></script>
+    <script type="text/javascript" src="../js/moveset_import_editor.js"></script>
 
     <div class="credits">Created by ForwardFeed thanks to the prior work of Honko with the smogon calc
         <ul>
             <li>
-                <a href="https://github.com/smogon/damage-calc" class="links-lighten" target="_blank">
+                <a href="https://github.com/ForwardFeed/unc" class="links-lighten" target="_blank">
                     GitHub repository
                 </a>
             </li>
         </ul>
 
         <button type="button" id="dark-theme-toggle"></button>
-        <script type="text/javascript" src="./js/dark-theme-toggle.js?"></script>
+        <script type="text/javascript" src="../js/dark-theme-toggle.js?"></script>
     </div>
 </body>
 
