--- a/src/renegade/index.html
+++ b/src/renegade/index.html
@@ -699,20 +699,22 @@
         </div>
         <div aria-label="trainer-poks" role="region">
             <fieldset class="poke-info" id="trainer-mons">
-                <legend align="center">TEAM/BOX</legend>
+                <legend align="center">Team/Box</legend>
                 <div>
-                    <legend class="dropzone" align="center">TEAM</legend>
+                    <legend class="dropzone" align="center">Team</legend>
                     <div id="team-poke-list" class="box-poke dropzone">
                     </div>
                 </div>
                 <hr>
                 <div>
-                    <legend class="dropzone" align="center">BOX</legend>
+                    <legend class="dropzone" align="center">Box
+                        <button id="rebox">Rebox all here</button>
+                    </legend>
                     <div id="box-poke-list" class="box-poke dropzone">
                     </div>
                 </div>
                 <div>
-                    <legend class="dropzone" align="center">BOX 2</legend>
+                    <legend class="dropzone" align="center">Box 2</legend>
                     <div id="box-poke-list2" class="box-poke dropzone">
                     </div>
                 </div>
@@ -761,7 +763,7 @@
                 </div>
                 <hr>
                 <div>
-                    <legend class="dropzone" align="center">TRASH ZONE</legend>
+                    <legend class="dropzone" align="center">Trash zone</legend>
                     <div id="trash-box" class="box-poke dropzone" data-placeholder="">
                         
                     </div>
