--- a/src/renegade/index.html
+++ b/src/renegade/index.html
@@ -1881,8 +1881,8 @@
         <button id="side-arrow-toggle" data-id="true">Show Side Arrows</button>
         <button id="double-legacy-mode">Doubles Modern</button>
     </div>
-</div>
-
+</div> 
+version 0.0.3 "I'm too impatient"
 <div id="note-box-frame" class="box-frame" hidden>
     <div class="box-frame-header" data-x="1220"data-y="200">
         <legend>Notes</legend>
