--- a/EK/index.html
+++ b/EK/index.html
@@ -767,8 +767,8 @@
                     <div id="trash-box" class="box-poke dropzone" data-placeholder="">
                         
                     </div>
-                    <button class="deadzone" id="trash-pok">Remove pokemon in the Trash</button>
-                    <button class="deadzone" id="clearSets">Remove all pokemons from all boxes</button>
+                    <button class="deadzone" id="trash-pok">Remove pokémon in the Trash</button>
+                    <button class="deadzone" id="clearSets">Clear all player's pokémons</button>
                 </div>
             </fieldset>
         </div>
