Changed the item system to be dynamic and scale with the available object

--- a/src/EK/trainereditor.html
+++ b/src/EK/trainereditor.html
@@ -686,6 +686,7 @@
     <script type="text/javascript" src="../js/trainereditor.js"></script>
     <script type="text/javascript" src="../js/moveset_import_editor.js"></script>
     <script type="text/javascript" src="./calculator_specific.js"></script>
+    <script type="text/javascript" src="../js/side_arrows_controls.js"></script>
 
     <div class="credits">Created by ForwardFeed thanks to the prior work of Honko with the smogon calc
         <ul>
