fixed trainer editor

--- a/src/EK/trainereditor.html
+++ b/src/EK/trainereditor.html
@@ -80,6 +80,7 @@
                     <div id ="new-trainer" class="edition-export" hidden>
                         <label for="trainer-edition-name">Trainer name: </label>
                         <input type="text" name="trainer-edition-name" id="trainer-edition-name" autocomplete="off">
+                        <button" id="validate-name">Validate Name</button hidden>
                     </div>
                     <button id="tag-optionnal">Tag as Optionnal</button>
                     <hr>
