--- a/src/runbun/index.html
+++ b/src/runbun/index.html
@@ -1754,6 +1754,7 @@
     <script type="text/javascript" src="../js/moveset_import.js?"></script>
     <script type="text/javascript" src="./calculator_specific.js"></script>
     <script type="text/javascript" src="../js/items_control.js"></script>
+    <script type="text/javascript" src="../js/side_arrows_controls.js"></script>
 </div>
 
 <div class="credits">Modification by ForwardFeed Originaly Created by Honko
