--- a/src/renegade/index.html
+++ b/src/renegade/index.html
@@ -1674,7 +1674,7 @@
                 <hr>
                 <button type="button" id="previous-trainer"> Previous Trainer</button>
                 <button type="button" id="next-trainer"> Next Trainer</button>
-                <button type="button" id="reset-trainer">Truck</button>
+                <button type="button" id="reset-trainer">Reset</button>
             </fieldset>
         </div>
     </div>
@@ -1772,7 +1772,7 @@
         <button id="double-legacy-mode">Doubles Modern</button>
     </div>
 </div> 
-version 0.0.3 "I'm too impatient"
+version 0.0.4 "Aye, is it fixed now?"
 <div id="note-box-frame" class="box-frame" hidden>
     <div class="box-frame-header" data-x="1220"data-y="200">
         <legend>Notes</legend>
