--- a/src/renegade/trainereditor.html
+++ b/src/renegade/trainereditor.html
@@ -644,7 +644,6 @@
                     <li>Boosts, HP aren't saved</li>
                 </ul>
             </p>
-            version 0.0.3 "I'm too impatient"
         </div>
     </div>
     <script type="text/javascript" src="../js/vendor/jquery-1.9.1.min.js"></script>
@@ -701,6 +700,7 @@
         <button type="button" id="dark-theme-toggle"></button>
         <script type="text/javascript" src="../js/dark-theme-toggle.js?"></script>
     </div>
+    version 0.0.4 "Aye, is it fixed now?"
 </body>
 
 </html>
