--- a/src/runbun/index.html
+++ b/src/runbun/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body class="wrapper">
-    <div id="settings-menu">
+    <div id="settings-menu" hidden>
         <div class="box-frame-header" data-x="0"data-y="0">
             <legend>Settings</legend>
             <div class="close-frame" id="close-settings-box">
@@ -1795,13 +1795,13 @@
         <li><a href="https://www.smogon.com/forums/threads/pok%C3%A9mon-showdown-damage-calculator.3593546/" class="links-lighten" target="_blank">Smogon Bug Reports</a></li>
         <li><a href="https://github.com/smogon/damage-calc" class="links-lighten" target="_blank">Smogon GitHub repository</a></li>
     </ul>
+    <button id="open-settings-box">Open Settings Panel</button>
     <div id="sets">
-        <script type="text/javascript" src="../js/dark-theme-toggle.js?"></script>
-        <button id="side-arrow-toggle" data-id="true">Show Side Arrows</button>
-        <button id="double-legacy-mode">Doubles Modern</button>
+        <span>version 0.0.4 "Aye, is it fixed now?"</span>
     </div>
+    
 </div> 
-version 0.0.4 "Aye, is it fixed now?"
+
 <div id="note-box-frame" class="box-frame" hidden>
     <div class="box-frame-header" data-x="1220"data-y="200">
         <legend>Notes</legend>
