--- a/src/renegade/index.html
+++ b/src/renegade/index.html
@@ -10,6 +10,7 @@
     <link type="text/css" rel="stylesheet" href="../css/basic-theme.css">
     <link type="text/css" rel="stylesheet" href="../css/dark-theme.css" id="dark-theme-styles">
     <link type="text/css" rel="stylesheet" href="../css/light-theme.css" id="light-theme-styles">
+    <link type="text/css" rel="stylesheet" href="../css/other-theme.css" id="other-theme-styles">
 </head>
 
 <body class="wrapper">
@@ -29,6 +30,8 @@
                 <input type="radio" name="theme" id="light-theme">
                 <label for="dark-theme">Dark Theme</label>
                 <input type="radio" name="theme" id="dark-theme" checked>
+                <label for="other-theme">Other Theme</label>
+                <input type="radio" name="theme" id="other-theme">
             </div>
         </div>
         <div id="settings-box">
