--- a/src/runbun/trainereditor.html
+++ b/src/runbun/trainereditor.html
@@ -11,6 +11,7 @@
     <link type="text/css" rel="stylesheet" href="../css/basic-theme.css">
     <link type="text/css" rel="stylesheet" href="../css/dark-theme.css" id="dark-theme-styles">
     <link type="text/css" rel="stylesheet" href="../css/light-theme.css" id="light-theme-styles">
+    <link type="text/css" rel="stylesheet" href="../css/other-theme.css" id="other-theme-styles">
 </head>
 
 <body class="wrapper">
@@ -30,6 +31,8 @@
                 <input type="radio" name="theme" id="light-theme">
                 <label for="dark-theme">Dark Theme</label>
                 <input type="radio" name="theme" id="dark-theme" checked>
+                <label for="other-theme">Other Theme</label>
+                <input type="radio" name="theme" id="other-theme">
             </div>
         </div>
         <script type="text/javascript" src="../js/theme-toggle.js"></script>
