--- a/src/renegade/index.html
+++ b/src/renegade/index.html
@@ -10,7 +10,7 @@
     <link type="text/css" rel="stylesheet" href="../css/basic-theme.css">
     <link type="text/css" rel="stylesheet" href="../css/dark-theme.css" id="dark-theme-styles">
     <link type="text/css" rel="stylesheet" href="../css/light-theme.css" id="light-theme-styles">
-    <link type="text/css" rel="stylesheet" href="../css/other-theme.css" id="other-theme-styles">
+    <link type="text/css" rel="stylesheet" href="../css/forest-theme.css" id="forest-theme-styles">
 </head>
 
 <body class="wrapper">
@@ -26,12 +26,12 @@
         <div id="settings-box">
             <div class="settings-row">
                 <span>Theme: </span>
-                <label for="light-theme">Light Theme</label>
+                <label for="light-theme">Light</label>
                 <input type="radio" name="theme" id="light-theme">
-                <label for="dark-theme">Dark Theme</label>
+                <label for="dark-theme">Dark</label>
                 <input type="radio" name="theme" id="dark-theme" checked>
-                <label for="other-theme">Other Theme</label>
-                <input type="radio" name="theme" id="other-theme">
+                <label for="forest-theme">Forest</label>
+                <input type="radio" name="theme" id="forest-theme">
             </div>
         </div>
         <div id="settings-box">
@@ -1174,7 +1174,7 @@
                 <input type="text" class="set-selector calc-trigger selector" />
                 <span style="width:auto">
                     <input type="radio" name="selection-filter" id="pokemons-only">Only pokedex</input>
-                    <input type="radio" name="selection-filter" id="no-pokedex">Hide pokedex</input> 
+                    <input type="radio" name="selection-filter" id="no-pokedex">No pokedex</input> 
                     <input type="radio" name="selection-filter" id="trainers-only">Only trainers</input> 
                     <input type="radio" name="selection-filter" id="any-selection" checked>Any</input> 
                 </span>
