--- a/src/runbun/trainereditor.html
+++ b/src/runbun/trainereditor.html
@@ -11,7 +11,7 @@
     <link type="text/css" rel="stylesheet" href="../css/basic-theme.css">
     <link type="text/css" rel="stylesheet" href="../css/dark-theme.css" id="dark-theme-styles">
     <link type="text/css" rel="stylesheet" href="../css/light-theme.css" id="light-theme-styles">
-    <link type="text/css" rel="stylesheet" href="../css/other-theme.css" id="other-theme-styles">
+    <link type="text/css" rel="stylesheet" href="../css/forest-theme.css" id="other-theme-styles">
 </head>
 
 <body class="wrapper">
@@ -27,12 +27,12 @@
         <div id="settings-box">
             <div class="settings-row">
                 <span>Theme: </span>
-                <label for="light-theme">Light Theme</label>
+                <label for="light-theme">Light</label>
                 <input type="radio" name="theme" id="light-theme">
-                <label for="dark-theme">Dark Theme</label>
+                <label for="dark-theme">Dark</label>
                 <input type="radio" name="theme" id="dark-theme" checked>
-                <label for="other-theme">Other Theme</label>
-                <input type="radio" name="theme" id="other-theme">
+                <label for="forest-theme">Forest</label>
+                <input type="radio" name="theme" id="forest-theme">
             </div>
         </div>
         <script type="text/javascript" src="../js/theme-toggle.js"></script>
