Added support forrrr gender

--- a/src/EK/trainereditor.html
+++ b/src/EK/trainereditor.html
@@ -712,7 +712,7 @@
         </ul>
         <button id="open-settings-box">Open Settings Panel</button>
         <div id="sets">
-            <span>version 0.0.4 "Aye, is it fixed now?"</span>
+            <span>version 0.1.0 "Poltergeists in my code"</span>
         </div>
     </div>
 </body>
