--- a/EK/trainereditor.html
+++ b/EK/trainereditor.html
@@ -8,23 +8,35 @@
     <link type="text/css" rel="stylesheet"href="../css/main.css?" />
     <link type="text/css" rel="stylesheet"href="../css/editor.css" />
     <link type="text/css" rel="stylesheet"href="../css/vendor/bootstrap.css" />
-    <link type="text/css" rel="stylesheet"href="../css/dark-theme.css" id="dark-theme-styles">
-    <!-- Immediately loads the dark theme in order to reduce FOIT -->
-    <script>
-        /*
-        * localStorage will only store strings
-        * This means that if it has the value 'false',
-        * It will be truey and incorrectly cause the
-        * dark theme to load.
-        */
-        if (localStorage.getItem('darkTheme') !== 'true') {
-            document.getElementById('dark-theme-styles').disabled = true;
-        }
-    </script>
+    <link type="text/css" rel="stylesheet" href="../css/basic-theme.css">
+    <link type="text/css" rel="stylesheet" href="../css/dark-theme.css" id="dark-theme-styles">
+    <link type="text/css" rel="stylesheet" href="../css/light-theme.css" id="light-theme-styles">
+    <link type="text/css" rel="stylesheet" href="../css/forest-theme.css" id="forest-theme-styles">
 </head>
 
-<body class="dark-theme">
-
+<body class="wrapper">
+    <div id="settings-menu" hidden>
+        <div class="box-frame-header" data-x="0"data-y="0">
+            <legend>Settings</legend>
+            <div class="close-frame" id="close-settings-box">
+                <div class="mdiv">
+                  <div class="md"></div>
+                </div>
+              </div>
+        </div>
+        <div id="settings-box">
+            <div class="settings-row">
+                <span>Theme: </span>
+                <label for="light-theme">Light</label>
+                <input type="radio" name="theme" id="light-theme">
+                <label for="dark-theme">Dark</label>
+                <input type="radio" name="theme" id="dark-theme" checked>
+                <label for="forest-theme">Forest</label>
+                <input type="radio" name="theme" id="forest-theme">
+            </div>
+        </div>
+        <script type="text/javascript" src="../js/theme-toggle.js"></script>
+    </div>
     <div class="wrapper">
         <span class="title-text main-title-text">UNC Pok&eacute;mon Calculator Trainer Editor </span>
         <hr>
@@ -80,6 +92,7 @@
                     <div id ="new-trainer" class="edition-export" hidden>
                         <label for="trainer-edition-name">Trainer name: </label>
                         <input type="text" name="trainer-edition-name" id="trainer-edition-name" autocomplete="off">
+                        <button" id="validate-name">Validate Name</button hidden>
                     </div>
                     <button id="tag-optionnal">Tag as Optionnal</button>
                     <hr>
@@ -643,7 +656,6 @@
                     <li>Boosts, HP aren't saved</li>
                 </ul>
             </p>
-            version 0.0.3 "I'm too impatient"
         </div>
     </div>
     <script type="text/javascript" src="../js/vendor/jquery-1.9.1.min.js"></script>
@@ -683,9 +695,11 @@
     <script type="text/javascript" src="../calc/adaptable.js?"></script>
     <script type="text/javascript" src="../calc/index.js?"></script>
     <script type="text/javascript" src="./data/calc_settings.js"></script>
+    <script type="text/javascript" src="./cs_pre_load.js"></script>
+    <script type="text/javascript" src="../js/settings_controls.js"></script>
     <script type="text/javascript" src="../js/trainereditor.js"></script>
     <script type="text/javascript" src="../js/moveset_import_editor.js"></script>
-    <script type="text/javascript" src="./calculator_specific.js"></script>
+    <script type="text/javascript" src="./cs_after_load.js"></script>
     <script type="text/javascript" src="../js/side_arrows_controls.js"></script>
 
     <div class="credits">Created by ForwardFeed thanks to the prior work of Honko with the smogon calc
@@ -696,9 +710,10 @@
                 </a>
             </li>
         </ul>
-
-        <button type="button" id="dark-theme-toggle"></button>
-        <script type="text/javascript" src="../js/dark-theme-toggle.js?"></script>
+        <button id="open-settings-box">Open Settings Panel</button>
+        <div id="sets">
+            <span>version 0.1.0 "Poltergeists in my code"</span>
+        </div>
     </div>
 </body>
 
