added some settings

--- a/src/EK/index.html
+++ b/src/EK/index.html
@@ -52,6 +52,21 @@
                 <input type="radio" name="arrows" id="show-arrows">
             </div>
         </div>
+        <div id="settings-box">
+            <div class="settings-row">
+                <span>Reset field when changing trainer:</span>
+                <label for="field-reset-off">Off</label>
+                <input type="radio" name="field-reset" id="field-reset-off" checked>
+                <label for="field-reset-on">On</label>
+                <input type="radio" name="field-reset" id="field-reset-on">
+            </div>
+        </div>
+        <legend> KEYBINDS </legend>
+        <div id="settings-box">
+            <div><b>SHIFT + Z</b> => Toggles all opposite moves as crits</div>
+            <div><b>ESCAPE</b> => Show / Hides settings menu</div>
+        </div>
+        
     </div>
     <!-- Load the theme right now-->
     <script type="text/javascript" src="../js/theme-toggle.js"></script>
